removed prefix from env/added info to Readme.md

--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,4 @@
-name: tabpfn
+name: tabpfnAE
 channels:
   - conda-forge
   - bioconda
@@ -41,7 +41,6 @@ dependencies:
   - libbrotlienc=1.1.0=hb9d3cd8_2
   - libclang-cpp20.1=20.1.5=default_h1df26ce_1
   - libclang13=20.1.5=default_he06ed0a_1
-  - libcups=2.3.3=h4637d8d_4
   - libdeflate=1.24=h86f0d12_0
   - libdrm=2.4.124=hb9d3cd8_0
   - libedit=3.1.20250104=pl5321h7949ede_0
@@ -171,7 +170,6 @@ dependencies:
       - six==1.17.0
       - sympy==1.14.0
       - tabpfn==2.0.9
-      - tabpfn-extensions==0.1.0
       - threadpoolctl==3.6.0
       - torch==2.7.0
       - tqdm==4.67.1
@@ -179,4 +177,3 @@ dependencies:
       - typing-extensions==4.13.2
       - tzdata==2025.2
       - urllib3==2.4.0
-prefix: /home/sven/miniconda3/envs/tabpfn
